<package format="2">
  <name>Gripper URDF</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Gripper URDF</p>
    <p>This package contains configuration data, 3D models and launch files
for Gripper URDF robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="essex.a@northeastern.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>