<package format="2">
  <name>gripper_demo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gripper_demo</p>
    <p>This package contains configuration data, 3D models and launch files
for gripper_demo robot</p>
  </description>
  <author>Aaron Essex</author>
  <maintainer email="essex.a@northeastern.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
